--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
         <a href="https://www.chess.com/member/xacitgm_speedrun">chess.com</a>
         <a href="https://github.com/gabegeytsman">github</a>
         <a href="https://substack.com/@theodoreabelkaine?utm_source=user-menu">substack</a>
+        <a href="https://www.goodreads.com/user/show/68906292-gabe-g">goodreads</a>
         <a href="https://x.com/elefantopotamus">twitter</a>
         <a href="mailto:ggeyts@gmail.com">mail</a>
       </div>
