fix my name lol

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 <body>
   <div class="container">
     <section class="hero fade-up">
-      <h1>robert steve</h1>
+      <h1>Gabe Geytsman</h1>
       <p></p>
 
       <div class="links">
