--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
       <div class="links">
         <a id="resume-link">resume</a>
-        <a href="www.linkedin.com/in/gabriel-geytsman-018159200">linkedin</a>
+        <a href="https://www.linkedin.com/in/gabriel-geytsman-018159200">linkedin</a>
         <a href="https://www.chess.com/member/xacitgm_speedrun">chess.com</a>
         <a href="https://github.com/gabegeytsman">github</a>
         <a href="https://substack.com/@theodoreabelkaine?utm_source=user-menu">substack</a>
