--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     
     <!-- Canvas container below header -->
     <div id="canvas-container"></div>
-    <p class="personal-blurb">Software engineer at  interested in tech and chess.</p>
+    <p class="personal-blurb">Software engineer at  interested in: tech, chess, piano, racquet sports, literature, and the mysteries of the universe in general.</p>
 
     <!-- Main content (shown by default) -->
     <div id="main-content">
