--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
         <a id="resume-link">resume</a>
         <a href="https://www.linkedin.com/in/gabriel-geytsman-018159200">linkedin</a>
         <a href="https://www.chess.com/member/xacitgm_speedrun">chess.com</a>
+        <a href="https://lichess.org/@/Xacitarxan">lichess</a>
         <a href="https://github.com/gabegeytsman">github</a>
         <a href="https://substack.com/@theodoreabelkaine?utm_source=user-menu">substack</a>
         <a href="https://www.goodreads.com/user/show/68906292-gabe-g">goodreads</a>
